--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Connect Lax</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
